--- a/soundExample.html
+++ b/soundExample.html
@@ -1,10 +1,3 @@
----
-layout: post
-title: Sound test
-published: true
----
-Sound test
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -45,7 +38,9 @@ Sound test
                 return;
             }
             
-           playlist = [ {artist : "레브(Reve)", mp3:"Resources/2016-02-10/바람의 꽃이 되어서.mp3",}
+           playlist = [ {artist : "Artist One", mp3:"Resources/1.mp3",}/*, 
+                        {artist : "Artist Two", mp3:"player/media/2.mp3",ogg:"player/media/2.ogg"}, 
+                        {artist : "Artist Three", mp3:"player/media/3.mp3",ogg:"player/media/3.ogg"}*/
                         ];
      
 
