--- a/_posts/2016-02-08-test.html
+++ b/_posts/2016-02-08-test.html
@@ -3,10 +3,6 @@ layout: post
 title: Sound test
 published: true
 ---
-Sound test
-
-![](/Resources/2016-02-09/Bluedio Turbine T2.jpg)
-
 <html>
 <head>
 
@@ -42,7 +38,7 @@ Sound test
                 return;
             }
             
-           playlist = [ {artist : "레브(Reve)", mp3:"/Resources/2016-02-10/바람의 꽃이 되어서.mp3",}
+           playlist = [ {artist : "Reve", mp3:"/Resources/2016-02-10/A flower of the wind.mp3",}
                         ];
      
 
