--- a/tags.html
+++ b/tags.html
@@ -2,6 +2,11 @@
 layout: page
 permalink: /tags/
 ---
+<style>
+li{
+  list-style-type: none;
+}
+</style>
 
 <ul class="tag-cloud">
 {% for tag in site.tags %}
