--- a/_posts/2016-07-01-yanzhongzhilu_yingxiang.html
+++ b/_posts/2016-07-01-yanzhongzhilu_yingxiang.html
@@ -13,15 +13,15 @@ permalink: /yanzhongzhilu
 <h1 style="text-align:center">延中之路</h1>
 <span style="text-align:center">
 	<br/><br/>
-	<iframe src="https://s3.ap-northeast-2.amazonaws.com/yanzhongzhilu/K%2BB%2BS%2Bda%2BQ-2015-09-18.mp4" width="640px" height="360px" allowfullscreen frameborder="0"></iframe>
+	<video src="https://s3.ap-northeast-2.amazonaws.com/yanzhongzhilu/K%2BB%2BS%2Bda%2BQ-2015-09-18.mp4" width="640px" height="360px" allowfullscreen frameborder="0"></video>
 	<br/><br/>
 	<span>KBS 다큐</span>
 	<br/><br/>
-	<iframe src="https://s3.ap-northeast-2.amazonaws.com/yanzhongzhilu/Su%2Bper%2Bch%2Bina.mp4" width="640px" height="360px" allowfullscreen frameborder="0"></iframe>
+	<video src="https://s3.ap-northeast-2.amazonaws.com/yanzhongzhilu/Su%2Bper%2Bch%2Bina.mp4" width="640px" height="360px" allowfullscreen frameborder="0"></video>
 	<br/><br/>
 	<span>슈퍼차이나</span>
 	<br/><br/>
-	<iframe src="https://s3.ap-northeast-2.amazonaws.com/yanzhongzhilu/mingjianwanli-37-2016-06-17.mp4" width="640px" height="360px" allowfullscreen frameborder="0"></iframe>
+	<video src="https://s3.ap-northeast-2.amazonaws.com/yanzhongzhilu/mingjianwanli-37-2016-06-17.mp4" width="640px" height="360px" allowfullscreen frameborder="0"></video>
 	<br/><br/>
 	<span>명견만리</span>
 </span>
