--- a/_posts/2016-07-01-yanzhongzhilu_yingxiang.html
+++ b/_posts/2016-07-01-yanzhongzhilu_yingxiang.html
@@ -18,21 +18,21 @@ permalink: /yanzhongzhilu
 		Your browser does not support the video tag.
 	</video>
 	<br/><br/>
-	<span>KBS 다큐</span>
+	<span style="text-align:center">KBS 다큐</span>
 	<br/><br/>
 	<video width="640" height="360" controls>
   		<source src="https://s3.ap-northeast-2.amazonaws.com/yanzhongzhilu/Su%2Bper%2Bch%2Bina.mp4" type="video/mp4">
 		Your browser does not support the video tag.
 	</video>
 	<br/><br/>
-	<span>슈퍼차이나</span>
+	<span style="text-align:center">슈퍼차이나</span>
 	<br/><br/>
 	<video width="640" height="360" controls>
   		<source src="https://s3.ap-northeast-2.amazonaws.com/yanzhongzhilu/mingjianwanli-37-2016-06-17.mp4" type="video/mp4">
 		Your browser does not support the video tag.
 	</video>
 	<br/><br/>
-	<span>명견만리</span>
+	<span style="text-align:center">명견만리</span>
 </span>
 
 </body>
