--- a/_posts/2016-07-01-yanzhongzhilu_yingxiang.html
+++ b/_posts/2016-07-01-yanzhongzhilu_yingxiang.html
@@ -13,24 +13,31 @@ permalink: /yanzhongzhilu
 <h1 style="text-align:center">延中之路</h1>
 <span style="text-align:center">
 	<br/><br/>
-	<video width="640" height="360" controls>
-  		<source src="https://s3.ap-northeast-2.amazonaws.com/yanzhongzhilu/K%2BB%2BS%2Bda%2BQ-2015-09-18.mp4" type="video/mp4">
-		Your browser does not support the video tag.
-	</video>
+	<div style="text-align:center">
+		<video width="640" height="360" controls>
+	  		<source src="https://s3.ap-northeast-2.amazonaws.com/yanzhongzhilu/K%2BB%2BS%2Bda%2BQ-2015-09-18.mp4" type="video/mp4">
+			Your browser does not support the video tag.
+		</video>
+	</div>
 	<br/><br/>
 	<span style="text-align:center">KBS 다큐</span>
 	<br/><br/>
-	<video width="640" height="360" controls>
-  		<source src="https://s3.ap-northeast-2.amazonaws.com/yanzhongzhilu/Su%2Bper%2Bch%2Bina.mp4" type="video/mp4">
-		Your browser does not support the video tag.
-	</video>
+	</span>
+	<div style="text-align:center">
+		<video width="640" height="360" controls>
+	  		<source src="https://s3.ap-northeast-2.amazonaws.com/yanzhongzhilu/Su%2Bper%2Bch%2Bina.mp4" type="video/mp4">
+			Your browser does not support the video tag.
+		</video>
+	</div>
 	<br/><br/>
 	<span style="text-align:center">슈퍼차이나</span>
 	<br/><br/>
-	<video width="640" height="360" controls>
-  		<source src="https://s3.ap-northeast-2.amazonaws.com/yanzhongzhilu/mingjianwanli-37-2016-06-17.mp4" type="video/mp4">
-		Your browser does not support the video tag.
-	</video>
+	<div style="text-align:center"
+		<video width="640" height="360" controls>
+  			<source src="https://s3.ap-northeast-2.amazonaws.com/yanzhongzhilu/mingjianwanli-37-2016-06-17.mp4" type="video/mp4">
+			Your browser does not support the video tag.
+		</video>
+	</div>
 	<br/><br/>
 	<span style="text-align:center">명견만리</span>
 </span>
