--- a/_posts/2016-07-01-yanzhongzhilu_yingxiang.html
+++ b/_posts/2016-07-01-yanzhongzhilu_yingxiang.html
@@ -32,7 +32,7 @@ permalink: /yanzhongzhilu
 	<br/><br/>
 	<span style="text-align:center">슈퍼차이나</span>
 	<br/><br/>
-	<div style="text-align:center"
+	<div style="text-align:center">
 		<video width="640" height="360" controls>
   			<source src="https://s3.ap-northeast-2.amazonaws.com/yanzhongzhilu/mingjianwanli-37-2016-06-17.mp4" type="video/mp4">
 			Your browser does not support the video tag.
