--- a/_posts/2016-07-01-yanzhongzhilu_yingxiang.html
+++ b/_posts/2016-07-01-yanzhongzhilu_yingxiang.html
@@ -20,7 +20,7 @@ permalink: /yanzhongzhilu
 		</video>
 	</div>
 	<br/><br/>
-	<span style="text-align:center">KBS 다큐</span>
+	<p align="center">KBS 다큐</p>
 	<br/><br/>
 	</span>
 	<div style="text-align:center">
@@ -30,7 +30,7 @@ permalink: /yanzhongzhilu
 		</video>
 	</div>
 	<br/><br/>
-	<span style="text-align:center">슈퍼차이나</span>
+	<p align="center">슈퍼차이나</p>
 	<br/><br/>
 	<div style="text-align:center">
 		<video width="640" height="360" controls>
@@ -39,7 +39,7 @@ permalink: /yanzhongzhilu
 		</video>
 	</div>
 	<br/><br/>
-	<span style="text-align:center">명견만리</span>
+	<p align="center">명견만리</p>
 </span>
 
 </body>
