북경 이름 변화

--- a/_posts/2016-09-29-북경-이름-변화.html
+++ b/_posts/2016-09-29-북경-이름-변화.html
@@ -1293,34 +1293,34 @@ footer {
 
 
 @font-face{
-	font-family: 'SpoqaSans';
-	src: url('file:///Users/Canor/Library/Application%20Support/abnerworks.Typora/themes/Spoqa/Spoqa%20Han%20Sans%20Regular.ttf');
-	font-weight: normal;
-	font-style: normal;
+  font-family: 'SpoqaSans';
+  src: url('file:///Users/Canor/Library/Application%20Support/abnerworks.Typora/themes/Spoqa/Spoqa%20Han%20Sans%20Regular.ttf');
+  font-weight: normal;
+  font-style: normal;
 }
 @font-face{
-	font-family: 'SpoqaSansBold';
-	src: url('file:///Users/Canor/Library/Application%20Support/abnerworks.Typora/themes/Spoqa/Spoqa%20Han%20Sans%20Bold.ttf');
-	font-weight: bold;
-	font-style: normal;
+  font-family: 'SpoqaSansBold';
+  src: url('file:///Users/Canor/Library/Application%20Support/abnerworks.Typora/themes/Spoqa/Spoqa%20Han%20Sans%20Bold.ttf');
+  font-weight: bold;
+  font-style: normal;
 }
 @font-face{
-	font-family: 'SpoqaSansThin';
-	src: url('file:///Users/Canor/Library/Application%20Support/abnerworks.Typora/themes/Spoqa/Spoqa%20Han%20Sans%20Thin.ttf');
-	font-weight: thin;
-	font-style: normal;
+  font-family: 'SpoqaSansThin';
+  src: url('file:///Users/Canor/Library/Application%20Support/abnerworks.Typora/themes/Spoqa/Spoqa%20Han%20Sans%20Thin.ttf');
+  font-weight: thin;
+  font-style: normal;
 }
 html,
 body{
-	font-family: "Noto Sans CJK KR", 'SpoqaSans', 'Yu Gothic', sans-serif;
-	background: #333333;
+  font-family: "Noto Sans CJK KR", 'SpoqaSans', 'Yu Gothic', sans-serif;
+  background: #333333;
 }
 ul{
-	list-style: circle;
+  list-style: circle;
 }
 </style>
 </head>
 <body class='typora-export ' >
-<div  id='write'  class = 'is-mac'><p>북경 이름의 변천사를 간략하게 한국어로 적어보았습니다. 원문은 <a href='https://en.wikipedia.org/wiki/Names_of_Beijing'>Names of Beijing - Wikipedia, the free encyclopedia</a>.</p><p>지명은 한국어 독음으로 읽었고 옆에 한자를 붙여놓았습니다. 어차피 이거 읽을 사람들은 다 중국어로 읽을 줄 알테니까.</p><hr /><p>지금의 북경 지역에 처음으로 주요한 사람들이 살기 시작한 건 기원 전 11세기에서 7세기 사이 계나라의 수도가 되면서입니다. 따라서 당시에는 <a href='https://en.wikipedia.org/wiki/Jicheng_(Beijing)'>계성蓟城</a>이라고 불렸지요. 이후에 연나라가 기원전 7세기 경 계나라를 정벌하면서 북경 지방은 <a href='https://en.wikipedia.org/wiki/Yanjing'>연경燕京</a>이라고 불리게 됩니다. 10세기와 12세기 사이의 요나라(거란족)은 연경이라는 이름을 완전히 되살려내는데 성공했고 이는 지금까지도 이어져 연경은 북경의 가장 일반적인 비공식 이름으로 남아있습니다. 이는 옌징 맥주와 전 옌칭 대학(지금은 북경 대학으로 병합)에 반영되어 있습니다.</p><p>진나라가 이 지역을 점령하면서 이 지역은 광양군广阳郡으로 불리게 되었구요.</p><p>한 왕조 시기에는 군사시설의 이름을 어양군渔阳郡으로 바꾸고 이 도시 이름을 범양范阳이라고 바꾸었습니다. <a href='http://bit.ly/2dB4zgR'>나무위키에 보니 삼국지에도 나왔</a>었더군요.</p><p>기원전 1세기부터 최소 4세기까지 서진왕조 기간동안 이 지역은 계현蓟县이라 불리며 <a href='https://ko.wikipedia.org/wiki/%EC%9C%A0%EC%A3%BC_(%EC%A4%91%EA%B5%AD)'>유주幽州</a>의 수도로 기능하였습니다.</p><p>당 왕조에서는 이 도시는 그냥 유주幽州라고 불렸으나 당현종에 이르러 범양으로 다시 복구됩니다.</p><p>10세기와 12세기에는 전술했듯이 요나라에 의해서 다시 연경이라고 불리게 됩니다. 아이러니하게도 이 시기에 이 도시는 남경南京으로도 알려졌는데 이는 이 도시가 자신들 영토의 가장 남쪽에 있는 부수도였기 때문이었다고 합니다.</p><p>12세기 진 왕조 후반에 가서는 중도中都로 알려집니다. <del>우리도 중도 있는데</del></p><p>원 왕조에는 이 지역을 확대하면서 연경이라고 불리던 지역 외에 확장된 지역을 대도大都라고 일컫게 됩니다. 몽골어로는 Daidu라고 불렀다고 하네요. 그리고 결국 새롭게 지어진 대도라는 지역이 기존의 연경 지역을 흡수하게 됩니다.</p><p>명 왕조에서 이 도시는 북평北平으로 알려지게 됩니다. <em>북쪽의 평화</em>라는 의미이지만 종종 <em>북쪽 평원</em>으로 이해되기도 합니다.</p><p>영락제는 1403년 북평을 제2의 수도로 하면서 도시 이름을 순천顺天으로 바꾸고 응천应天과 직례直隶(지금의 남경지역)을 본따서 순천 주변에 북직례北直隶를 만듭니다.</p><p>1420년 자금성이 완공되자 영락제는 앞마당을 북쪽으로 옮깁니다. 응천(지금의 남경)에 대해서 사용되던 경사京师는 순천에 대해 사용되게 됩니다. 남겨진 응천 지방은 남경이라 불리게 되면서 이에 상대되는 순천 지방은 북경이라 불리게 됩니다.</p></div>
+<div  id='write'  class = 'is-mac'><p>북경 이름의 변천사를 간략하게 한국어로 적어보았습니다. 원문은 <a href='https://en.wikipedia.org/wiki/Names_of_Beijing'>Names of Beijing - Wikipedia, the free encyclopedia</a>.</p><p>지명은 한국어 독음으로 읽었고 옆에 한자를 붙여놓았습니다. 어차피 이거 읽을 사람들은 다 중국어로 읽을 줄 알테니까.</p><hr /><p>지금의 북경 지역에 처음으로 주요한 사람들이 살기 시작한 건 기원 전 11세기에서 7세기 사이 계나라의 수도가 되면서입니다. 따라서 당시에는 <a href='https://en.wikipedia.org/wiki/Jicheng_(Beijing)'><strong>계성蓟城</strong></a>이라고 불렸지요. 이후에 연나라가 기원전 7세기 경 계나라를 정벌하면서 북경 지방은 <a href='https://en.wikipedia.org/wiki/Yanjing'><strong>연경燕京</strong></a>이라고 불리게 됩니다. 10세기와 12세기 사이의 요나라(거란족)은 연경이라는 이름을 완전히 되살려내는데 성공했고 이는 지금까지도 이어져 연경은 북경의 가장 일반적인 비공식 이름으로 남아있습니다. 이는 옌징 맥주와 전 옌칭 대학(지금은 북경 대학으로 병합)에 반영되어 있습니다.</p><p>진나라가 이 지역을 점령하면서 이 지역은 <strong>광양군广阳郡</strong>으로 불리게 되었구요.</p><p>한 왕조 시기에는 군사시설의 이름을 <strong>어양군渔阳郡</strong>으로 바꾸고 이 도시 이름을 <strong>범양范阳</strong>이라고 바꾸었습니다. <a href='http://bit.ly/2dB4zgR'>나무위키에 보니 삼국지에도 나왔</a>었다더군요.</p><p>기원전 1세기부터 최소 4세기까지 서진왕조 기간동안 이 지역은 <strong>계현蓟县</strong>이라 불리며 <a href='https://ko.wikipedia.org/wiki/%EC%9C%A0%EC%A3%BC_(%EC%A4%91%EA%B5%AD)'>유주幽州</a>의 수도로 기능하였습니다.</p><p>당 왕조에서는 이 도시는 그냥 <strong>유주幽州</strong>라고 불렸으나 당현종에 이르러 <strong>범양</strong>으로 다시 복구됩니다.</p><p>10세기와 12세기에는 전술했듯이 요나라에 의해서 다시 <strong>연경</strong>이라고 불리게 됩니다. 아이러니하게도 이 시기에 이 도시는 <strong>남경南京</strong>으로도 알려졌는데 이는 이 도시가 자신들 영토의 가장 남쪽에 있는 부(副)수도였기 때문이었다고 합니다.</p><p>12세기 진 왕조 후반에 가서는 <strong>중도中都</strong>로 알려집니다. <del>우리도 중도 있는데</del></p><p>원 왕조에는 이 지역을 확대하면서 <strong>연경</strong>이라고 불리던 지역 외에 확장된 지역을 <strong>대도大都</strong>라고 일컫게 됩니다. 몽골어로는 Daidu라고 불렀다고 하네요. 그리고 결국 새롭게 지어진 대도라는 지역이 기존의 연경 지역을 흡수하게 됩니다.</p><p>명 왕조에서 이 도시는 <strong>북평北平</strong>으로 알려지게 됩니다. <em>북쪽의 평화</em>라는 의미이지만 종종 <em>북쪽 평원</em>으로 이해되기도 합니다.</p><p>영락제는 1403년 북평을 제2의 수도로 하면서 도시 이름을 <strong>순천顺天</strong>으로 바꾸고 <em>응천应天</em>과 <em>직례直隶</em>(지금의 남경지역)을 본따서 순천 주변에 <strong>북직례北直隶</strong>를 만듭니다.</p><p>1420년 자금성이 완공되자 영락제는 앞마당을 북쪽으로 옮깁니다. 응천(지금의 남경)에 대해서 사용되던 <strong>경사京师</strong>는 순천에 대해 사용되게 됩니다. 남겨진 응천 지방은 남경이라 불리게 되면서 이에 상대되는 순천 지방은 <strong>북경</strong>이라 불리게 됩니다.</p></div>
 </body>
 </html>
