ebs media files

--- a/_posts/2016-11-04-ebs_media_files.html
+++ b/_posts/2016-11-04-ebs_media_files.html
@@ -1,13 +1,12 @@
 ---
-layout: page_plain
-title: media files
+layout: plain
+title:  
 menu: private
 permalink: /ebs
 ---
 <!DOCTYPE html>
 <html>
 <head>
-	<title>미디어 자료</title>
 </head>
 <body style="text-align:center">
 <br/>
