ebs media files

--- a/_posts/2016-11-04-ebs_media_files.html
+++ b/_posts/2016-11-04-ebs_media_files.html
@@ -8,7 +8,7 @@ permalink: /ebs
 <html>
 <head>
 </head>
-<body style="text-align:center">
+<body style="text-align:center; background:#333333">
 <br/>
 <p>1회</p>
 <video width="640" height="360" controls>
