ebs media files

--- a/_posts/2016-11-04-ebs_media_files.html
+++ b/_posts/2016-11-04-ebs_media_files.html
@@ -7,6 +7,11 @@ permalink: /ebs
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+p{
+	color: gray;
+}
+</style>
 </head>
 <body style="text-align:center; background-color:#333333">
 <br/>
