--- a/search.html
+++ b/search.html
@@ -1,8 +1,7 @@
  ---
  layout: page
  title: Search
- permalink: /search/
- sitemap: false
+ permalink: /search
  ---
  <div id="home-search" class="home">
     <script>
