--- a/_posts/2017-11-28-charmgongik.html
+++ b/_posts/2017-11-28-charmgongik.html
@@ -12,14 +12,13 @@ permalink: /charmgongik
             name='viewport' 
             content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' 
         />
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <script type="text/javascript" src="Resources/js/MailSearcher.js"></script>
         <style>
-            /* body{
-                display: inline;
+            body{
+                width: 100vw;
                 margin: 0px;
                 padding: 0px;
-            } */
+            }
             .judgeList{
                 float: left;
                 box-shadow: 0 0 0 1px black inset;          
@@ -27,21 +26,18 @@ permalink: /charmgongik
                 /* height: 100%; */
             }
             .inputBox {
-                float: left;
+                float: right;
                 box-shadow: 0 0 0 1px black inset;          
                 width: 25%;
             }
-            /* br {
-                
-            } */
         </style>
     </head>
     <body>
         <div>
-                <div class="judgeList" id="judgeList">CHARM-GONGIK</div>
-                <div class="inputBox">
+            <div class="judgeList" id="judgeList">CHARM-GONGIK</div>
+            <div class="inputBox">
                 <input type="text" id="myInput" oninput="searchJudge()">
-                <button type="button" id="clearButton" onclick="clearSearch()" ></button>
+                <button type="button" id="clearButton" onclick="clearSearch()">Clear</button>
             </div>
         </div>
     </body>
