charmgongik 3rd update

--- a/_posts/2017-11-28-charmgongik.html
+++ b/_posts/2017-11-28-charmgongik.html
@@ -27,8 +27,17 @@ permalink: /charmgongik
             }
             .inputBox {
                 float: right;
-                box-shadow: 0 0 0 1px black inset;          
+                box-shadow: 0 0 0 1px black inset;
+                padding: 10px;
                 width: 25%;
+                height: 150px;
+            }
+            #myInput{
+                height: 100px;
+                width: 70%;
+            }
+            #clearButton{
+                height: 100px;
             }
         </style>
     </head>
