charmgongik 4th update

--- a/_posts/2017-11-28-charmgongik.html
+++ b/_posts/2017-11-28-charmgongik.html
@@ -28,7 +28,7 @@ permalink: /charmgongik
             .inputBox {
                 float: right;
                 box-shadow: 0 0 0 1px black inset;
-                padding: 10px;
+                padding: 1%;
                 width: 25%;
                 height: 150px;
             }
