--- a/_posts/2017-11-28-charmgongik.html
+++ b/_posts/2017-11-28-charmgongik.html
@@ -17,12 +17,14 @@ permalink: /charmgongik
             body{
                 width: 100vw;
                 margin: 0px;
-                padding: 0px;
+                padding: 10px;;
             }
             .judgeList{
                 float: left;
                 box-shadow: 0 0 0 1px black inset;          
                 width: 70%;
+                min-height: 150px;
+                padding: 1% 0 1% 1%;
                 /* height: 100%; */
             }
             .inputBox {
@@ -35,6 +37,7 @@ permalink: /charmgongik
             #myInput{
                 height: 100px;
                 width: 70%;
+                font-size: 40px;
             }
             #clearButton{
                 height: 100px;
