--- a/_posts/2017-11-28-charmgongik.html
+++ b/_posts/2017-11-28-charmgongik.html
@@ -1,16 +1,16 @@
 ---
 layout: page_plain
-title:  
-menu: private
+title:
+menu: 'private'
 permalink: /charmgongik
 ---
 <!DOCTYPE html>
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta 
-            name='viewport' 
-            content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' 
+        <meta
+            name='viewport'
+            content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'
         />
         <script type="text/javascript" src="Resources/js/MailSearcher.js"></script>
         <style>
@@ -21,7 +21,7 @@ permalink: /charmgongik
             }
             .judgeList{
                 float: left;
-                box-shadow: 0 0 0 1px black inset;          
+                box-shadow: 0 0 0 1px black inset;
                 width: 70%;
                 min-height: 150px;
                 padding: 1% 0 1% 1%;
