--- a/_posts/2017-11-28-charmgongik.html
+++ b/_posts/2017-11-28-charmgongik.html
@@ -8,10 +8,7 @@ permalink: /charmgongik
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta
-            name='viewport'
-            content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'
-        />
+        <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no'/>
         <script type="text/javascript" src="Resources/js/MailSearcher.js"></script>
         <style>
             body{
