charmgongik font updated

--- a/_posts/2017-11-28-charmgongik.html
+++ b/_posts/2017-11-28-charmgongik.html
@@ -14,7 +14,7 @@ permalink: /charmgongik
             body{
                 width: 100vw;
                 margin: 0px;
-                padding: 10px;;
+                padding: 10px;
             }
             .judgeList{
                 float: left;
@@ -34,7 +34,7 @@ permalink: /charmgongik
             #myInput{
                 height: 100px;
                 width: 70%;
-                font-size: 40px;
+                font-size: 100%;
             }
             #clearButton{
                 height: 100px;
