charmgongik outer box margin

--- a/_posts/2017-11-28-charmgongik.html
+++ b/_posts/2017-11-28-charmgongik.html
@@ -14,7 +14,7 @@ permalink: /charmgongik
             body{
                 width: 100vw;
                 margin: 0px;
-                padding: 10px;
+                padding: 0px;
             }
             .judgeList{
                 float: left;
@@ -31,6 +31,9 @@ permalink: /charmgongik
                 width: 25%;
                 height: 150px;
             }
+            #charmgongik{
+              margin: 10px;
+            }
             #myInput{
                 height: 100px;
                 width: 70%;
@@ -42,7 +45,7 @@ permalink: /charmgongik
         </style>
     </head>
     <body>
-        <div>
+        <div id="charmgongik">
             <div class="judgeList" id="judgeList">CHARM-GONGIK</div>
             <div class="inputBox">
                 <input type="text" id="myInput" oninput="searchJudge()">
