iphonex dock folder bug

--- a/_posts/2018-01-16-iphonex-dock-folder-bug.html
+++ b/_posts/2018-01-16-iphonex-dock-folder-bug.html
@@ -6,6 +6,6 @@ menu: private
 ---
 
 <video height="562px" autoplay loop>
-  <soure src="/Resources/2018-01-14/iphone dock folder bug.mov">
+  <source src="https://github.com/Canorus/canorus.github.io/raw/master/Resources/2018-01-14/iphone%20dock%20folder%20bug.mov">
   Browser not supported
 </video>
