--- a/_posts/2018-01-16-iphonex-dock-folder-bug.html
+++ b/_posts/2018-01-16-iphonex-dock-folder-bug.html
@@ -1,11 +1,13 @@
 ---
 layout: temp
-title:
+title: ""
 permalink: /iphonex-dock-folder-bug
 menu: private
 ---
 
-<video height="562px" autoplay loop>
-  <source src="https://github.com/Canorus/canorus.github.io/raw/master/Resources/2018-01-14/iphone%20dock%20folder%20bug.mov">
-  Browser not supported
-</video>
+<div style="text-align:center">
+  <video height="562px" autoplay loop>
+    <source src="https://github.com/Canorus/canorus.github.io/raw/master/Resources/2018-01-14/iphone%20dock%20folder%20bug.mov">
+    Browser not supported
+  </video>
+</div>
