--- a/_posts/2018-06-10-sullaria.html
+++ b/_posts/2018-06-10-sullaria.html
@@ -99,7 +99,7 @@ permalink: /sullaria
 
       <div id="meissen2" class="item">
         <div id="meissen2imag" class="imag" style="float:right">
-          <img src="/Resources/sullaria/6.jpg"/>
+          <img src="/Resources/sullaria/6.JPG"/>
         </div>
         <div id="meissen2desc">
           <h1>the Second Meissens</h1>
