--- a/_posts/2018-08-20-tyre-pressure.html
+++ b/_posts/2018-08-20-tyre-pressure.html
@@ -1,15 +1,11 @@
---- 
-layout: page_plain 
-title: tyre pressure 
-menu: 'private' 
-permalink: /tyre_pressure 
----
+--- layout: page_plain title: tyre pressure menu: 'private' permalink: /tyre_pressure ---
 <!doctype html>
 <html>
 
 <head>
     <title>최적 공기압 계산기</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <style>
         @import url('https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding');
         @import url('https://fonts.googleapis.com/css?family=Nanum+Gothic');
