--- a/_posts/2018-08-20-tyre-pressure.html
+++ b/_posts/2018-08-20-tyre-pressure.html
@@ -1,4 +1,9 @@
---- layout: page_plain title: tyre pressure menu: 'private' permalink: /tyre_pressure ---
+---
+layout: page_plain 
+title: tyre pressure 
+menu: 'private' 
+permalink: /tyre_pressure 
+---
 <!doctype html>
 <html>
 
